fix: correct vertical overflow in small viewports

--- a/src/styles.css
+++ b/src/styles.css
@@ -202,12 +202,12 @@ h2 {
 #days-container {
   display: grid;
   gap: 10px;
-  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));;
+  grid-template-columns: repeat(auto-fit, minmax(125px, 1fr));;
   grid-auto-rows: min-content;
   margin-top: -10px;
   width: 100%;
   overflow-y: auto;
-  max-height: 100%;
+  max-height: 50vh;
 }
 
 .day-wrapper {
